# musashi

./: .dockerignore.optimized  .env.example  .gitignore  CHANGELOG.md  CI_DEBUG_GUIDE.md  CLAUDE.md  CODE_IMPROVEMENT_REPORT.md  COMPONENT_GUIDELINES.md  CONTRIBUTING.md  DOCKER_COMPOSE_GUIDE.md  DOCKER_OPTIMIZATION_REPORT.md  Dockerfile  Dockerfile.optimized  Dockerfile.test  INSTALL.md  LICENSE  LICENSE-THIRD-PARTY  Makefile  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.4.md  RELEASE_NOTES_v1.0.5.md  RELEASE_NOTES_v1.0.6.md  RELEASE_READINESS.md  SECURITY.md  create_admin_simple.py  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  enhanced_translate.py  k8s-deployment.yaml  main.py  nginx.conf  process_korean_strings.py  pyproject.toml  run-musashi.sh  translate_korean_strings.py
.changes/: ci-fix.md  ghcr_pkg_url.txt  image_path.txt  last-run.json  owner.txt  status.txt
.claude/: musashi_commands.md  musashi_settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
artifacts/: brand_map.json  doc_fix_plan.md  docs_fix_summary.md  enhanced-translation-map.json  inventory.json  korean_strings.json  korean_strings_by_file.json  memory_status.txt  summary_for_memory.txt  translation-map.json
backend/: generate_hash.py  requirements.txt  setup.py  test_debug.py  test_simple.py
backend/app/: main.py
docs/: PROJECT_SUMMARY.md
frontend/: .eslintrc.component-rules.js  Dockerfile  component-checklist.md  final-ui-report.js  find-add-button.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
mcp/: Dockerfile  README.md
mcp/servers/context7/: pyproject.toml
mcp/servers/context7/src/context7_mcp/: __init__.py  __main__.py  server.py
mcp/servers/sequential-thinking/: pyproject.toml
mcp/servers/sequential-thinking/src/sequential_thinking_mcp/: __init__.py  __main__.py  server.py
plan/: diff-summary.md  i18n-plan.md
scripts/: README.md  build-optimized.sh  ci-debug.sh  ci-docker-test.sh  ci-local-test.sh  ci-repro.sh  ci-validate.sh  derive-paths.sh  docker-start.sh  image-path.sh  merge-deps.sh  replace_phrase.py  scan_hangul.py  scan_hangul_source.py  scan_phrase.py  test_superclaude.py  translate_ko_to_en.py
(+208 files in other folders)
