[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context7-mcp"
version = "1.0.0"
description = "Context7 MCP server for advanced context management in Musashi workflows"
readme = "README.md"
authors = [
    { name = "Musashi Team" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
context7-mcp = "context7_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/context7_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true