[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sequential-thinking-mcp"
version = "1.0.0"
description = "Sequential Thinking MCP server for step-by-step reasoning in Musashi workflows"
readme = "README.md"
authors = [
    { name = "Musashi Team" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "anthropic>=0.7.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
sequential-thinking-mcp = "sequential_thinking_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sequential_thinking_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true